skip replaced with offset
