# Api/swagger/theparking-eu_list.yaml
@@ -13,12 +13,12 @@ paths:
             example: 10
           description: Number of results to return
         - in: query
-          name: skip
+          name: offset
           required: true
           schema:
             type: integer
             example: 0
-          description: Number of results to skip (for pagination)
+          description: Number of results to skip (offset) - use for pagination
         - in: query
           name: sort
           required: true
